--- a/public/bandersnatch/manifest.json
+++ b/public/bandersnatch/manifest.json
@@ -1,32 +1,28 @@
 {
     "hostTag": "$HOST",
     "fileResolutionTag": "$RESOLUTION",
-    "localhost": "http://127.0.0.1:8081",
-    "production": "",
-    "codec": "video/mp4; codecs=\"avc1.640aaaa01F, mp4a.40.2\"",
+    "localHost": "http://127.0.0.1:8081",
+    "productionHost": "",
+    "codec": "video/mp4; codecs=\"avc1.64001F,mp4a.40.2\"",
     "intro": {
         "url": "$HOST/timeline/01.intro/01.intro-12.733333-$RESOLUTION.mp4",
         "at": 10,
-        "options": ["Guitarra", "Violão"], 
+        "options": ["Guitarra", "Violao"],
         "defaultOption": "Guitarra"
-
     },
     "guitarra": {
         "url": "$HOST/timeline/02.guitarra/02.guitarra-20.733333-$RESOLUTION.mp4",
-        "at": 17,
-        "options": ["Finalizar", "Violão"],
-        "defaultOption": ""
-
+        "at": 18,
+        "options": ["Finalizar", "Violao"],
+        "defaultOption": "Finalizar"
     },
     "violao": {
         "url": "$HOST/timeline/02.guitarra/02.guitarra-20.733333-$RESOLUTION.mp4",
-        "at": 27,
+        "at": 28,
         "options": ["Finalizar", "Guitarra"],
-        "defaultOption": ""
-
+        "defaultOption": "Finalizar"
     },
     "finalizar": {
-        "url": "$HOST/timeline/02.guitarra/02.guitarra-20.733333-$RESOLUTION.mp4"
+        "url": "$HOST/timeline/02.violao/02.violao-31.066667-$RESOLUTION.mp4"
     }
-
 }
